# stl_compat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Options.cmake  README.md
example/: CMakeLists.txt  condition_variable.cpp  mutex.cpp  optional.cpp  thread.cpp
include/: memory  optional
include/boost/smart_ptr/: enable_shared_from_this.hpp
include/boost/thread/win32/: basic_timed_mutex.hpp
include/boost/utility/: string_view.hpp
include/helper/: cppversion_detection.hpp
include/std_compat/: array  bind  chrono  cmath  condition_variable  exception  filesystem  functional  memory  mutex  ratio  shared_mutex  string_view  thread
include/std_compat/containers/: array.hpp
include/std_compat/helper/: cpp_compat_directives.hpp  cppversion_detection.hpp
include/std_compat/thread/: mutex.hpp
include/std_compat/threading/: condition_variable.hpp  mutex.hpp  shared_mutex.hpp  thread.hpp
include/std_compat/threading/detail/: shared_mutex.cpp  shared_mutex.hpp
include/std_compat/threading/win32/: condition_variable.hpp  mutex.hpp
include/std_compat/utilities/: bind.hpp  chrono.hpp  cmath.hpp  exception.hpp  filesystem.hpp  functional.hpp  memory.hpp  optional.hpp  ratio.hpp  string_view.hpp
include/std_compat/utilities/chrono/: chrono_boost_wrapper.hpp  ratio_boost_wrapper.hpp
include/utilities/: optional.hpp
rtl/: Borland.cmake  CMakeLists.txt  NuGet.cmake
test/: CMakeLists.txt
test/StlBenchmarks/: TestBase.h  condition_variable.cpp  mutex.cpp
test/StlUnitTests/: TestBase.h  main.cpp
test/StlUnitTests/std/: bindFixure.cpp  condition_variableFixture.cpp  enable_shared_from_thisFixture.cpp  filesystemFixture.cpp  mutexFixture.cpp  shared_mutexFixture.cpp  shared_ptrFixture.cpp
test/benchmark/: CMakeLists.txt  condition_variable.cpp  mutex.cpp  tss_null.cpp
